--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 __pycache__/
 *.py[cod]
 *$py.class
-*.pyc
+
 
 # C extensions
 *.so
@@ -24,6 +24,9 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
+last_files
+__pycache__
+*.pyc
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
